# entropy-pooling

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.yml
.github/workflows/: tests.yml
entropy_pooling/: __init__.py  entropy_pooling.py
example/: 2_SequentialEntropyPooling.ipynb  EntropyPooling.ipynb
examples/: 1_EntropyPooling.ipynb  2_SequentialEntropyPooling.ipynb
tests/: context.py  test_entropy_pooling.py
